build/log/idf_py_stderr_output_12810
Command: make -j 10 all
In file included from /home/fus/Documents/DO-AN-02/comDriver/spi/spi.c:1:
In function 'spiSetGPIO',
    inlined from 'spiHandleCLKIsr' at /home/fus/Documents/DO-AN-02/comDriver/spi/spi.c:221:9:
/home/fus/Documents/DO-AN-02/comDriver/spi/spi.h:169:8: error: 'outBit' may be used uninitialized [-Werror=maybe-uninitialized]
  169 |     if (level == LOW)
      |        ^
/home/fus/Documents/DO-AN-02/comDriver/spi/spi.c: In function 'spiHandleCLKIsr':
/home/fus/Documents/DO-AN-02/comDriver/spi/spi.c:219:17: note: 'outBit' was declared here
  219 |         uint8_t outBit;
      |                 ^~~~~~
In function 'spiSetGPIO',
    inlined from 'spiStartTransaction' at /home/fus/Documents/DO-AN-02/comDriver/spi/spi.c:531:9:
/home/fus/Documents/DO-AN-02/comDriver/spi/spi.h:169:8: error: 'outBit' may be used uninitialized [-Werror=maybe-uninitialized]
  169 |     if (level == LOW)
      |        ^
/home/fus/Documents/DO-AN-02/comDriver/spi/spi.c: In function 'spiStartTransaction':
/home/fus/Documents/DO-AN-02/comDriver/spi/spi.c:528:17: note: 'outBit' was declared here
  528 |         uint8_t outBit;
      |                 ^~~~~~
cc1: some warnings being treated as errors
make[2]: *** [esp-idf/spi/CMakeFiles/__idf_spi.dir/build.make:79: esp-idf/spi/CMakeFiles/__idf_spi.dir/spi.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:7589: esp-idf/spi/CMakeFiles/__idf_spi.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
